# lacon

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  VISION.md
.claude/: settings.json
.claude/hooks/: lacon-output-probe.sh
.github/workflows/: ci.yml
.jigc/: .gitignore  AGENT.md  version
.jigc/config/: manifest.yaml  packs.yaml
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/intel/classifications/: 0001-use-claude-code-hooks.json  0002-rust-as-primary-language.json  0003-starlark-for-escape-hatch.json  0004-config-precedence.json  0005-streaming-first.json  0006-hybrid-rewrite-and-filter.json  0007-first-match-wins.json  0008-aggregated-starlark.json  0009-separated-raw-outputs.json  0010-on-error-replaces-pipeline.json  0011-sqlite-for-tracking.json  0012-append-only-inheritance.json  0013-filter-via-pretooluse-wrapper.json  doc-architecture.json  doc-backlog.json  doc-bundled-rules-roadmap.json  doc-open-questions.json  doc-testing-rules.json  doc-v1-scope.json  doc-vision.json  spec-chained-commands.json  spec-config-schema.json  spec-filter-rule-schema.json  spec-tracking-data-model.json
.planning/phases/01-engine-core-lacon-run-wrapper/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-07-SUMMARY.md  01-08-PLAN.md  01-08-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-local-tracking/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-PHASE-BENCH.md  02-RESEARCH.md  02-REVIEW.md  02-SECURITY.md  02-UAT.md  02-VERIFICATION.md  deferred-items.md
.planning/phases/03-claude-code-adapter-lacon-init/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  (+6 more)
benches/: Cargo.toml  cold_start.rs
bundled-rules/: cargo-build.yaml  cargo-test.yaml  docker-build.yaml  eslint.yaml  git-status.yaml  jest.yaml  pkg-install.yaml  pytest.yaml  test-base.yaml  tsc.yaml  vitest.yaml
crates/lacon-adapter-claudecode/: Cargo.toml
crates/lacon-adapter-claudecode/src/: chain.rs  lib.rs  protocol.rs  quote.rs  tui.rs
crates/lacon-adapter-claudecode/tests/: chain_split.rs  hook_e2e.rs  tui_heuristic.rs
crates/lacon-cli/: Cargo.toml
crates/lacon-cli/src/: cli.rs  main.rs
crates/lacon-cli/src/commands/: doctor.rs  explain.rs  init.rs  mod.rs  run.rs  stats.rs  validate.rs
crates/lacon-cli/tests/: cli_doctor.rs  cli_explain.rs  cli_init.rs  cli_run.rs  cli_stats.rs  cli_surface.rs  cli_validate.rs  end_to_end.rs  hot_reload.rs  pnpm_e2e.rs  tracking_best_effort.rs  tracking_coldstart.rs  tracking_e2e.rs
crates/lacon-core/: Cargo.toml
crates/lacon-core/benches/: tracker_open.rs
crates/lacon-core/src/: error.rs  lib.rs
crates/lacon-core/src/config/: mod.rs
crates/lacon-core/src/pipeline/: mod.rs  stages.rs
crates/lacon-core/src/rules/: bundled.rs  loader.rs  mod.rs  rewrite.rs  schema.rs
crates/lacon-core/src/runtime/: mod.rs
crates/lacon-core/src/starlark_host/: mod.rs
crates/lacon-core/src/tracking/: health.rs  migrations.rs  mod.rs  normalize.rs  privacy.rs  prune.rs  query.rs  record.rs
crates/lacon-core/src/tracking/migrations/: 0001_initial.sql
crates/lacon-core/src/validate/: mod.rs
crates/lacon-core/tests/: bundled_rules.rs  extends_flatten.rs  primitives.rs  rules_loader.rs  runtime_bypass.rs  runtime_filter_bytes.rs  runtime_on_error.rs  runtime_signal.rs  runtime_subprocess.rs  starlark_host.rs  tracking_normalize.rs  tracking_privacy.rs  tracking_prune.rs  tracking_query.rs  tracking_record.rs  tracking_schema.rs  tracking_tracker.rs  tracking_views.rs  validate_dispatch.rs  wave0_smoke.rs
crates/lacon-core/tests/fixtures/configs/: project_with_retention.yaml  unknown_key.yaml  valid_user.yaml
crates/lacon-core/tests/fixtures/rules/: child.yaml  cycle_a.yaml  cycle_b.yaml  invalid_regex.yaml  missing_script.yaml  parent.yaml  unknown_primitive.yaml  valid_simple.yaml  zero_lines_keep_tail.yaml
crates/lacon-core/tests/fixtures/scripts/: error_filter.star  hermetic_violation.star  identity.star  uppercase.star
docs/: architecture.md  backlog.md  benchmarks.md  bundled-rules-roadmap.md  deferral-ledger.md  open-questions.md  primitive-reference.md  roadmap.md  testing-rules.md  v1-scope.md  vision.md  worked-example.md
docs/architecture/: engine-and-claude-code-integration.md
docs/completions/: v1-0.md
docs/decisions/: 0001-use-claude-code-hooks.md  0002-rust-as-primary-language.md  0003-starlark-for-escape-hatch.md  0004-config-precedence.md  0004-project-user-bundled-config.md  0005-streaming-first-output-processing.md  0005-streaming-first.md  0006-hybrid-command-rewriting-and.md  0006-hybrid-rewrite-and-filter.md  0007-first-match-wins-rule.md  0007-first-match-wins.md  0008-aggregated-post-process-starlark.md  0008-aggregated-starlark.md  0009-separated-raw-outputs-table.md  0009-separated-raw-outputs.md  0010-on-error-replaces-pipeline.md  0010-on-error-replaces.md  0011-sqlite-for-local-tracking.md  0011-sqlite-for-tracking.md  0012-append-only-inheritance-via.md  0012-append-only-inheritance.md  0013-filter-via-pretooluse-rewritten.md  0013-filter-via-pretooluse-wrapper.md  0014-lacon-stats-read-time.md  0014-stats-read-time-presentation.md
docs/prds/: v1-scope.md
docs/specs/: chained-commands.md  config-schema.md  filter-rule-schema.md  tracking-data-model.md
scripts/: bench-cold-start.sh
(+173 files in other folders)
