[workspace]
members = ["crates/*", "bin/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["lacon contributors"]
repository = "https://github.com/maurice/lacon"

[workspace.dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0.26"
clap = { version = "4", features = ["derive"] }
starlark = "0.13"
os_pipe = "1"
crossbeam-channel = "0.5"
nix = { version = "0.31", features = ["signal"] }
signal-hook = "0.3"
thiserror = "2"
anyhow = "1"
etcetera = "0.11"
rust-embed = "8"
smallvec = "1"
# dev-only — declared here so member crates can inherit via workspace = true
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = "1"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
