[package]
name = "lacon-adapter-claudecode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
lacon-core = { path = "../lacon-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "lacon-claude-hook"
path = "src/bin/hook.rs"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
