[package]
name = "lacon-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "lacon"
path = "src/main.rs"

[dependencies]
lacon-core = { path = "../lacon-core" }
clap = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
etcetera = { workspace = true }
# Phase 3 Plan 05: `lacon init` parses/writes `.claude/settings.json` via
# serde_json::Value (D-11) and writes it atomically via tempfile (D-13).
serde_json = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
test_emitter = { path = "../../bin/test_emitter" }
# Phase 6 Plan 01 (D-07): the hermetic pnpm E2E drives the `lacon-claude-hook`
# binary via `assert_cmd::cargo::cargo_bin`, which resolves it from
# `target/debug/lacon-claude-hook` (its `legacy_cargo_bin` fallback). Cargo does
# NOT set `CARGO_BIN_EXE_lacon-claude-hook` for a cross-package binary behind a
# plain path dev-dep — only the dependent package's OWN bins get that env var
# (artifact deps that would set it require unstable `-Zbindeps`, rejected on
# stable). So the hook bin must be MATERIALIZED by a prior `cargo build`; CI runs
# `cargo build --workspace` before the test sweep (.github/workflows/ci.yml).
# This dev-dep keeps the adapter in lacon-cli's test build graph; it does not by
# itself guarantee bin resolution. No dependency cycle: the adapter depends only
# on lacon-core, not lacon-cli.
lacon-adapter-claudecode = { path = "../lacon-adapter-claudecode" }
# Phase 2 Plan 06: tracking e2e tests open the DB via rusqlite to assert
# row contents, view queryability, and PRAGMA state.
rusqlite = { workspace = true }
